tests/typechecker/should_fail/timed_section_tock.csp
Timed (\ _ @ 1) { }

f(tock) = 1
f(1) = 0
